CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(ModelTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR}) # <Core/ExternalTypes.h>
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgNetworkTest ${SOURCES} ${HEADERS})

TARGET_LINK_LIBRARIES(bfgNetworkTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
	bfgModel
	bfgNetwork
	bfgPhysics
	bfgView
)

INSTALL(TARGETS bfgNetworkTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
